# MUICE

./: README.md
AP/Cuaderno_de_Prácticas_Keras/: Cuaderno de chapter02_mathematical-building-blocks.i  Cuaderno de chapter02_network-from-scratch.ipynb  Cuaderno de chapter03_introduction-to-keras-and-tf.i  Cuaderno de chapter04_getting-started-with-neural-networks.i
AP/Prácticas_de_series_temporales/: Cuaderno_de_Prácticas_Redes_Recurrentes.ipynb  Cuaderno_de_Prácticas_Series_Temporales.ipynb
AW./: README.md
AW./Actividad4-Generación de informes/: Actividad4-Generación de informes.ipynb
CAP./CAP-Practica1_/: CMakeLists.txt  README.md  Results_vectors.md  practica1_matrices.cpp
CAP./CAP-Practica2_/: Results_matrices.md  practica1_vectors.cpp
CAP./CAP-Practica3_/: CMakeLists.txt  README.md  Results.md  practica3_Construccion.cpp  practica3_Construccion_2.cpp  practica3_Numero-e-Identificador-de-los-Hilos.cpp  practica3_Variables_threadprivate.cpp  practica3_paraleliza_practica1.cpp
CAP./GEMM_/: Makefile  run_driver.sh  steps.md
CAP./GEMM_TRIALS_/: my gemm 2 results.txt  my gemm 3 results.txt  my gemm 4 results.txt  my gemm 5 results.txt  my_gemm_1.c  my_gemm_2.c  my_gemm_3.c  my_gemm_4.c  my_gemm_5.c
CNC/CNC-Clasificación-Jerárquica./: CNC_Practica3_HierarchicalClassification.ipynb
CNC/CNC-Clasificación_Convencional./: Ejercicio0.ipynb  Ejercicio1.ipynb  Ejercicio2.ipynb  Ejercicio3.ipynb  Ejercicio4.ipynb
CNC/CNC-Clasificación_Multi-instancia./: CNC-Practica2_Multi_Instance_Classification.ipynb  CorelCars.csv  CorelDesserts.csv
(+160 files in other folders)
